엑셀끝 다했당

--- a/app/src/main/res/layout/activity_execl.xml
+++ b/app/src/main/res/layout/activity_execl.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000"></LinearLayout>
-    1
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,16 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:weightSum="2"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="그 결과는!"
-                android:textSize="50sp" />
+            android:orientation="vertical"
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/activity_execl_seeExecl"
@@ -37,6 +29,13 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="엑셀보기" />
+
+            <Button
+                android:id="@+id/activity_excel_saveExcel"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="엑셀저장" />
         </LinearLayout>
     </LinearLayout>
 
@@ -44,39 +43,42 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
-        android:weightSum="3"
         android:orientation="horizontal"
+        android:weightSum="3"
 
         >
+
         <Button
             android:id="@+id/activity_execl_btn_leftup"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="↖"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
+
         <Button
             android:id="@+id/activity_execl_btn_up"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="↑"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
+
         <Button
             android:id="@+id/activity_execl_btn_rightup"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="↗"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
-        android:weightSum="3"
         android:orientation="horizontal"
+        android:weightSum="3"
 
         >
 
@@ -86,7 +88,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="←"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/activity_execl_btn_center"
@@ -94,40 +96,42 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="O"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
+
         <Button
             android:id="@+id/activity_execl_btn_right"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="→"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
     </LinearLayout>
-
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1"
-        android:weightSum="3"
         android:orientation="horizontal"
+        android:weightSum="3"
 
         >
+
         <Button
             android:id="@+id/activity_execl_btn_leftdown"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="↙"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
+
         <Button
             android:id="@+id/activity_execl_btn_down"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="↓"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/activity_execl_btn_rightdown"
@@ -135,10 +139,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="↘"
-            android:textSize="50sp"/>
+            android:textSize="50sp" />
     </LinearLayout>
-
-
 
 
 </LinearLayout>
