--- a/app/src/main/res/layout/activity_execl.xml
+++ b/app/src/main/res/layout/activity_execl.xml
@@ -24,11 +24,24 @@
             android:weightSum="2">
 
             <Button
+                android:onClick="onClick                    "
                 android:id="@+id/activity_execl_saveExecl"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="엑셀보기" />
+
+
+            <TextView
+                android:id="@+id/activity_execl_seeData"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:textSize="50sp"
+                android:text="엑셀보기" />
+
+
 
         </LinearLayout>
     </LinearLayout>
