Ver1.2.4 QAM(dot)그래프 라이브러리 제작, 적용완료  ,엑셀에 @기록되던거 수정

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -17,5 +17,9 @@
         android:id="@+id/menu_item_excel"
         android:title="excel"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_item_dot"
+        android:title="dot"
+        app:showAsAction="never" />
 
 </menu>
