--- a/app/src/main/res/layout/activity_dot.xml
+++ b/app/src/main/res/layout/activity_dot.xml
@@ -22,9 +22,11 @@
 
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/activity_dot_btn"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:text="+"
             />
 
 
