--- a/app/src/main/res/layout/activity_dot.xml
+++ b/app/src/main/res/layout/activity_dot.xml
@@ -18,15 +18,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
 
         <Button
-            android:id="@+id/activity_dot_btn"
-            android:onClick="onClick"
+            android:id="@+id/activity_dot_start_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="+"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="start" />
+
+        <Button
+            android:id="@+id/activity_dot_stop_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="stop"
+
             />
 
 
