--- a/app/src/main/res/layout/activity_dot.xml
+++ b/app/src/main/res/layout/activity_dot.xml
@@ -19,7 +19,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="3">
 
 
         <Button
@@ -37,6 +37,16 @@
             android:layout_weight="1"
             android:onClick="onClick"
             android:text="stop"
+
+            />
+
+        <Button
+            android:id="@+id/activity_dot_reset_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="reset"
 
             />
 
