--- a/app/src/main/res/layout/activity_dot.xml
+++ b/app/src/main/res/layout/activity_dot.xml
@@ -12,7 +12,8 @@
         android:layout_weight="9"
         app:dotSize="4dp"
         app:lineColor="#807f44f4"
-        app:lineWidth="1dp" />
+        app:lineWidth="1dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
